Fixed centering and spacing on icons

--- a/css/main.css
+++ b/css/main.css
@@ -18,14 +18,20 @@ header{
 
 
 .otherSites{
-  list-style: none;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  /*
   margin: 0;
   padding: 0;
   overflow: hidden;
   width: 60%;
   margin-left: 20%;
   margin-right: 20%;
+  */
 }
+
 
 .otherSites a:link, .otherSites a:visited{
   /*color: white;*/
@@ -36,6 +42,19 @@ header{
   color: black;
 }
 
+.otherSites img{
+  width: 25px;
+  height: 25px;
+}
+
+.otherSites a{
+  margin: 0 20px;
+}
+
+#otherSitesContainer{
+  margin: 0 -20px;
+}
+
 .nameDiv{
   width: 100%;
   margin: auto;
@@ -43,7 +62,7 @@ header{
   text-align: center;
 /*  font-size: 25px;*/
   font-size: 2vw;
-  color: white;
+  color: rgb(66, 118, 118);
 }
 
 .nameDiv li{
@@ -104,14 +123,7 @@ nav a:hover {
   /*font-size: 17px;*/
 }
 
-.userBanner{
-  display: inline-block;
-  background-color:white;
-  /*background-color: rgb(116, 168, 168);*/
-  /*height: 100px;*/
-  width: 100%;
-  margin-bottom: 0;
-}
+
 
 img.portrait {
  /* position: relative;*/
@@ -123,7 +135,7 @@ img.portrait {
   margin-top: 50px;
   */
   margin-top: 3%;
-  display: block;
+  display: flex;
   width: 20%; 
   max-width: 300px;
   min-width: 150px;
@@ -140,13 +152,6 @@ h4 {
   color: rgb(66, 118, 118);
 }
 
-.fixed{
-  /*
-  position: fixed;
-  */
-}
-
-
 .content {
   
   width: 90%;
@@ -162,29 +167,6 @@ h4 {
   /*width: 100%;*/
 }
 
-.resume{
-  background-color: white;
-  
-}
-div .resume{
-  width: 100%;
-  height: 100%;
-  margin-left: 21%;
-  float: right;
-}
-
-.resume div {
-  border-bottom: 1px solid black;
-}
-
-.resume ul{
-  list-style-type: none;
-}
-
-img .link{
-  width: 100%;
-  height: 100%;
-}
 
 #honors {
   border: 0;
